{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 10,
  "lineage": "e8fd3aba-07de-1aac-3e54-126177568a5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ca570c1b6d79f36",
            "arn": "arn:aws:ec2:ap-south-1:169497827603:instance/i-06da1d984d4eeebcb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06da1d984d4eeebcb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01de16f8311130232",
            "private_dns": "ip-10-0-2-189.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.189",
            "public_ip": "13.233.44.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-044871d1f5fe6b042",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081ca9ea3d4d1f864",
            "tags": {
              "Name": "nginxserver"
            },
            "tags_all": {
              "Name": "nginxserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02265d1cf28d2694e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nginxSG",
            "aws_subnet.my-vpc-publicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:169497827603:internet-gateway/igw-0b50068ac1063e5d7",
            "id": "igw-0b50068ac1063e5d7",
            "owner_id": "169497827603",
            "tags": {
              "name": "my-vpc-igw"
            },
            "tags_all": {
              "name": "my-vpc-igw"
            },
            "vpc_id": "vpc-08c02ea53212f989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-vpc-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:169497827603:route-table/rtb-07e5a6330a329259d",
            "id": "rtb-07e5a6330a329259d",
            "owner_id": "169497827603",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b50068ac1063e5d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "my-vpc-routetable"
            },
            "tags_all": {
              "name": "my-vpc-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c02ea53212f989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my-vpc-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc0e09c03bb0c41d",
            "route_table_id": "rtb-07e5a6330a329259d",
            "subnet_id": "subnet-0626beec3327991a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my-vpc-igw",
            "aws_route_table.my-vpc-routetable",
            "aws_subnet.my-vpc-privatesubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b48a37e9190e8d6",
            "route_table_id": "rtb-07e5a6330a329259d",
            "subnet_id": "subnet-081ca9ea3d4d1f864"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my-vpc-igw",
            "aws_route_table.my-vpc-routetable",
            "aws_subnet.my-vpc-publicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginxSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:169497827603:security-group/sg-02265d1cf28d2694e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02265d1cf28d2694e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251214071148520600000001",
            "name_prefix": "terraform-",
            "owner_id": "169497827603",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "nginxSG"
            },
            "tags_all": {
              "name": "nginxSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c02ea53212f989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-vpc-privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:169497827603:subnet/subnet-0626beec3327991a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0626beec3327991a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169497827603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private-myvpc-subnet"
            },
            "tags_all": {
              "name": "private-myvpc-subnet"
            },
            "vpc_id": "vpc-08c02ea53212f989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-vpc-publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:169497827603:subnet/subnet-081ca9ea3d4d1f864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081ca9ea3d4d1f864",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169497827603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public-myvpc-subnet"
            },
            "tags_all": {
              "name": "public-myvpc-subnet"
            },
            "vpc_id": "vpc-08c02ea53212f989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:169497827603:vpc/vpc-08c02ea53212f989a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05990e6275b3716c7",
            "default_route_table_id": "rtb-0914cc6a90d2e6490",
            "default_security_group_id": "sg-065858823a063c8b4",
            "dhcp_options_id": "dopt-0a38476fb126ee267",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c02ea53212f989a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0914cc6a90d2e6490",
            "owner_id": "169497827603",
            "tags": {
              "name": "my-vpc"
            },
            "tags_all": {
              "name": "my-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}